--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,29 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: <%= ENV.fetch("PG_HOST", "localhost") %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
 
 development:
   <<: *default
-  database: project_ambience_development
+  url: <%= ENV["DATABASE_URL"] || "postgresql://localhost/project_ambience_development" %>
 
 test:
   <<: *default
-  database: project_ambience_test
+  url: <%= ENV["DATABASE_URL"] || "postgresql://localhost/project_ambience_test" %>
 
 production:
-  <<: *default
-  database: project_ambience_production
-  username: <%= ENV["PG_USERNAME"] %>
-  password: <%= ENV["PG_PASSWORD"] %>
-  host: <%= ENV["PG_HOST"] %>
+  primary:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
+  cable:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
+  queue:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
+  cache:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
