--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,8 @@
 ARG RUBY_VERSION=3.4.2
 FROM ruby:$RUBY_VERSION-slim
 
+RUN apt-get update && apt-get install -y vim
+
 WORKDIR /rails
 
 # Install dev dependencies
