--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,7 +28,7 @@ services:
       - app-net-dev
     depends_on:
       - db
-    command: ["bin/rails", "server", "-b", "0.0.0.0", "-p", "3000"]
+    command: sh -c "rm -f /rails/tmp/pids/server.pid && bin/rails server -b 0.0.0.0 -p 3000"
 
   client:
     build:
@@ -45,6 +45,29 @@ services:
       - app-net-dev
     depends_on:
       - api
+
+  rabbitmq:
+    image: rabbitmq:3.12-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - app-net-dev
+
+  python-worker:
+    build:
+      context: ./python-worker
+      dockerfile: Dockerfile
+    volumes:
+      - ./python-worker:/app
+    depends_on:
+      - rabbitmq
+      - api
+    networks:
+      - app-net-dev
+    environment:
+      - RAILS_API_CALLBACK_URL=http://api:3000/api/internal/results
+      - HMAC_SECRET=${HMAC_SECRET}
 
 volumes:
   db-data-dev:
