--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,19 @@ services:
     depends_on:
       - db
     command: ["bin/rails", "server", "-b", "0.0.0.0", "-p", "3000"]
+  
+  sneakers:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    environment:
+      RAILS_ENV: development
+      DATABASE_URL: "postgresql://postgres:password@db:5432/project_ambience_development"
+    networks:
+      - app-net
+    depends_on:
+      - db
+    command: ["bundle", "exec", "rake", "sneakers:run"]
 
   client:
     build:
