--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,15 @@ services:
     networks:
       - app-net-dev
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    networks:
+      - app-net-dev
+    env_file:
+      - .env
+
   api:
     build:
       context: .
@@ -28,6 +37,9 @@ services:
       - app-net-dev
     depends_on:
       - db
+      - redis
+    env_file:
+      - .env
     command: ["bin/rails", "server", "-b", "0.0.0.0", "-p", "3000"]
 
   sneakers:
@@ -41,6 +53,9 @@ services:
       - app-net-dev
     depends_on:
       - db
+      - redis
+    env_file:
+      - .env
     command: ["bundle", "exec", "rake", "sneakers:run"]
 
   client:
@@ -54,6 +69,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - CABLE_URL=ws://172.16.2.70:5091/cable
     networks:
       - app-net-dev
     depends_on:
