--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,7 @@
 # to make the web console appear.
 development:
   adapter: redis
-  url: ENV["REDIS_URL"]
+  url: <%= ENV["REDIS_URL"] %>
 
 test:
   adapter: test
