PA69: handle response from AI (#29)
* initial commit

* Use cable

* Subscribe to action cable in UI

* undo unwanted change

* Modify message fix argument error

* Fix how to call ENV in yml

* Fix React env var

* Modify UI

* Add tests

* Fix style

---------

Co-authored-by: Saruj Sattayanurak <saruj@Sarujs-MacBook-Pro.local>

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,15 @@ services:
     networks:
       - app-net-dev
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    networks:
+      - app-net-dev
+    env_file:
+      - .env
+
   api:
     build:
       context: .
@@ -28,7 +37,26 @@ services:
       - app-net-dev
     depends_on:
       - db
+      - redis
+    env_file:
+      - .env
     command: ["bin/rails", "server", "-b", "0.0.0.0", "-p", "3000"]
+
+  sneakers:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    environment:
+      RAILS_ENV: development
+      DATABASE_URL: "postgresql://postgres:password@db:5432/project_ambience_development"
+    networks:
+      - app-net-dev
+    depends_on:
+      - db
+      - redis
+    env_file:
+      - .env
+    command: ["bundle", "exec", "rake", "sneakers:run"]
 
   client:
     build:
@@ -41,6 +69,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_CABLE_URL=ws://128.16.12.219:5091/cable
     networks:
       - app-net-dev
     depends_on:
