--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_CABLE_URL=ws://api:7091/cable
+      - REACT_APP_CABLE_URL=ws://128.16.12.219:7091/cable
     networks:
       - app-net
     depends_on:
